--- a/src/HAI722I/tds/td_1.tex
+++ b/src/HAI722I/tds/td_1.tex
@@ -758,17 +758,395 @@
 }{}
 
 
-% % ----- Consignes exo 2 ----- %
-% \begin{td-exo}[] % 2
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
 
-% \end{td-exo}
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
 
-% % ----- Solutions exo 2 ----- %
-% \iftoggle{showsolutions}{
-% 	\begin{td-sol}[]\ %
+
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
+
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
+
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
+
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
+
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
+
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
+
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
+
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
+
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 18 ----- %
+\begin{td-exo}[] % 18
+	A remplir %TODO write exercise 18
+\end{td-exo}
+
+% ----- Solutions exo 18 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		A remplir %TODO solve exercise 18
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 29 ----- %
+\begin{td-exo}[La méthode du simplexe n'est pas une méthode polynomiale]\,\\ % 29
+	Dans cet exercice nous allons montrer que la méthode du simplexe n'est pas une méthode polynomiale.
+	Pour cela, nous allons considérer le programme linéaire suivant:
+	\begin{equation*}
+		(PL_n)=
+		\begin{cases}
+			\max z = 2^{n-1} x_1 + 2^{n-2} x_2 + \cdots + 2x_{n-1} + x_n \\
+			x_1 \leq 5\\
+			4x_1 + x_2 \leq 25\\
+			8x_1 + 4x_2 + x_3 \leq 125\\
+			\ldots\\
+			2^n x_1 + 2^{n-1} x_2 + \cdots + 4x_{n-1} + x_n \leq 5^n\\
+			x_i \geq 0, \quad i=1,\ldots,n.
+		\end{cases}
+	\end{equation*}\,
+	\begin{enumerate}
+		\item Donner la forme standard de \((PL_n)\).
+		\item Donner la solution optimale.
+		\item Montrer que \(\forall i, x_i\) et \(y_i\) (où \(y_i\) est la variable d'écart associée à la \(i\)-ième
+		variable) ne peuvent être en même temps des variables hors base.
+		\item Nous allons montrer que \(2^n\) tableaux sont nécessaires pour résoudre ce problème.
+		\begin{itemize}
+			\item Vérifez-le pour \(n=1\).
+			\item Montrez-le pour \(n=2\).
+			\begin{itemize}
+				\item Résoudre graphiquement.
+				\item Résoudre par la méthode des tableaux. Combien de tableaux sont nécessaires
+				pour résoudre \((PL_2)\).
+				\item Quel est le chemin des visites des points extrêmes. Montrez que le 
+				dernier tableau peut se mettre sous la forme (voir le tableau 2).
+				\begin{equation*}
+					2cx + x_n \leq 5^n
+				\end{equation*}
+				où
+				\begin{equation*}
+					l\in \{1,\ldots,n-1\}, \quad c = (2^{n-1}, 2^{n-2}, \ldots, 2),
+				\end{equation*}
+				et \(A\) est la matrice associé au \(n-1\) premières contraintes.
+			\end{itemize}
+			\item Supposons par hypothèse de récurrence que la résolution du programme linéaire 
+			\(PL_n\) nécessite \(2^n\) tableaux. Nous allons montrer que la résolution du
+			programme linéaire \(PL_{n+1}\) nécessite \(2^{n+1}\) tableaux.
+			\begin{itemize}
+				\item 
+			\end{itemize}
+		\end{itemize}
+	\end{enumerate}
+\end{td-exo}
+
+% ----- Solutions exo 29 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		\begin{enumerate}
+			\item On réécrit les équations avec les \(n\) variables d'écart \(y_i\):
+			\begin{equation*}
+				\begin{cases}
+					\max z = 2^{n-1} x_1 + 2^{n-2} x_2 + \cdots + 2x_{n-1} + x_n + 0\cdot y_1 + \cdots + 0\cdot y_n \\
+					x_1 + y_1 = 5\\
+					4x_1 + x_2 + y_2 = 25\\
+					8x_1 + 4x_2 + x_3 + y_3 = 125\\
+					\vdots\\
+					2^n x_1 + 2^{n-1} x_2 + \cdots + 4x_{n-1} + x_n + y_n = 5^n\\
+					x_i, y_i \geq 0, \quad i=1,\ldots,n.
+				\end{cases}
+			\end{equation*}
+			\item Pour \(n=1\), la solution optimale est \(x_1 = 5\).
+
+			Pour \(n=2\), la solution optimale est \((0, 25)\). On peut
+			vérifier avec le tableau du simplexe qui suit:
+			\begin{center}
+				\begin{tabular}{|ccc|cccc|} % chktex 44
+					\hline  % chktex 44
+					& \ &\(c\)&\(2\)&\(1\)&\(0\)&\(0\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(y_1\)&\(y_2\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_1^{1}=y_1\)} &\(5\)&\(1\)&\(0\)&\(1\)&\(0\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_2^{1}=y_2\)} &\(25\)&\(4\)&\(1\)&\(0\)&\(1\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(0\)} &\(-2\)&\(-1\)&\(0\)&\(0\)\\
+					\hline % chktex 44
+				\end{tabular}
+			\end{center}
+			ensuite
+			\begin{center}
+				\begin{tabular}{|ccc|cccc|} % chktex 44
+					\hline  % chktex 44
+					& \ &\(c\)&\(2\)&\(1\)&\(0\)&\(0\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(y_1\)&\(y_2\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(2\)}& \multicolumn{1}{c|}{\(x_1^{2}=x_1\)} &\(5\)&\(1\)&\(0\)&\(1\)&\(0\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_2^{2}=y_2\)} &\(5\)&\(0\)&\(1\)&\(-4\)&\(1\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(10\)} &\(0\)&\(-1\)&\(2\)&\(0\)\\
+					\hline % chktex 44
+				\end{tabular}
+			\end{center}
+			ensuite
+			\begin{center}
+				\begin{tabular}{|ccc|cccc|} % chktex 44
+					\hline  % chktex 44
+					& \ &\(c\)&\(2\)&\(1\)&\(0\)&\(0\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(y_1\)&\(y_2\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(2\)}& \multicolumn{1}{c|}{\(x_1^{3}=x_1\)} &\(5\)&\(1\)&\(0\)&\(1\)&\(0\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(1\)}& \multicolumn{1}{c|}{\(x_2^{3}=x_2\)} &\(5\)&\(0\)&\(1\)&\(-4\)&\(1\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(10\)} &\(0\)&\(0\)&\(-2\)&\(1\)\\
+					\hline % chktex 44
+				\end{tabular}
+			\end{center}
+			et enfin
+			\begin{center}
+				\begin{tabular}{|ccc|cccc|} % chktex 44
+					\hline  % chktex 44
+					& \ &\(c\)&\(2\)&\(1\)&\(0\)&\(0\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(y_1\)&\(y_2\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_1^{4}=y_1\)} &\(5\)&\(1\)&\(0\)&\(1\)&\(0\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{\(1\)}& \multicolumn{1}{c|}{\(x_2^{4}=x_2\)} &\(25\)&\(4\)&\(1\)&\(0\)&\(1\)\\
+					\hline % chktex 44
+					\multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(25\)} &\(2\)&\(0\)&\(0\)&\(1\)\\
+					\hline % chktex 44
+				\end{tabular}
+			\end{center}
+			ce qui confirme que la solution optimale est \((0, 25)\).
+			\item On ecrit les deux lignes du tableau et on 
+			regarde ce qui se passe en \(x_i\) et \(y_i\):
+			\begin{equation*}
+				\begin{aligned}
+					&2^{i-1}x_1 + 2^{i-2}x_2 + \cdots + 4x_{i-2} + x_{i-1} + y_{i-1} = 5^{i-1}\\
+					&2^i x_1 + 2^{i-1}x_2 + \cdots + 4x_{i-1} + x_i + y_i = 5^i
+				\end{aligned}
+			\end{equation*}
+			Si \(y_i = 0\), alors dans l'équation du haut on a
+			\begin{equation*}
+				4x_{i-1} = 5^{i-1} - 2^{i-1}x_1 - 2^{i-2}x_2 - \cdots - x_{i-2} \geq 0
+			\end{equation*}
+			mais dans celle du bas on a
+			\begin{equation*}
+				4x_{i-1} = 4\cdot 5^{i-1} - 2^i x_1 - 2^{i-1}x_2 - \cdots - x_i > 0
+			\end{equation*}
+			
+			Si on fait cela aussi avec \(x_i = 0\), on trouve que \(x_i = y_i = 0\)
+			est impossible.
+
+			\item On a
+			\begin{enumerate}
+				\item \,%
+			\end{enumerate}
+		\end{enumerate}
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 2 ----- %
+\begin{td-exo}[] % 2
+
+\end{td-exo}
+
+% ----- Solutions exo 2 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
 		
-% 	\end{td-sol}
-% }{}
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 2 ----- %
+\begin{td-exo}[] % 2
+
+\end{td-exo}
+
+% ----- Solutions exo 2 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 2 ----- %
+\begin{td-exo}[] % 2
+
+\end{td-exo}
+
+% ----- Solutions exo 2 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 33 ----- %
+\begin{td-exo}[Détermination du dual] % 33
+	Déterminer le dual des programmes suivants:
+	\begin{enumerate}
+		\item \, \begin{equation*}
+			(PL_0) = 
+			\begin{cases}
+				\min z(x_1, x_2, x_3) = 5x_1 + 2x_2 + x_3\\
+				2x_1 + 3x_2 + x_3 \geq 20\\
+				6x_1 + 8x_2 + 5x_3 \geq 30\\
+				7x_1 + x_2 + 3x_3 \geq 40\\
+				x_1 + 2x_2 + 4x_3 \geq 50\\
+				x_1, x_2, x_3 \geq 0.
+			\end{cases}
+		\end{equation*}
+
+		\item \, \begin{equation*}
+			(PL_1) = 
+			\begin{cases}
+				\max z(x_1, x_2) = 2x_1 + x_2\\
+				x_1 + 5x_2 \leq 10\\
+				x_1 + 3x_2 \leq 6\\
+				2x_1 + 2x_2 \leq 8\\
+				x_1, x_2 \geq 0.
+			\end{cases}
+		\end{equation*}
+	\end{enumerate}
+\end{td-exo}
+
+% ----- Solutions exo 33 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[]\ %
+		On a
+		\begin{enumerate}
+			\item Le dual du programme \((PL_0)\) est
+			\begin{equation*}
+				\begin{cases}
+					\max 20 y_1 + 30 y_2 + 40 y_3 + 50 y_4\\
+					2y_1 + 6y_2 + 7y_3 + y_4 \leq 5\\
+					3y_1 + 8y_2 + y_3 + 2y_4 \leq 2\\
+					y_1 + 5y_2 + 3y_3 + 4y_4 \leq 1\\
+					y_1, y_2, y_3, y_4 \geq 0.
+				\end{cases}
+			\end{equation*}
+
+			\item Le dual du programme \((PL_1)\) est
+			\begin{equation*}
+				\begin{cases}
+					\min 10y_1 + 6y_2 + 8y_3\\
+					y_1 + y_2 + 2y_3 \geq 2\\
+					5y_1 + 3y_2 + 2y_3 \geq 1\\
+					y_1, y_2, y_3 \geq 0.
+				\end{cases}
+			\end{equation*}
+		\end{enumerate}
+	\end{td-sol}
+}{}
 
 
 % % ----- Consignes exo 2 ----- %
