tmp change in theorem def

--- a/src/common/macros/theorems.tex
+++ b/src/common/macros/theorems.tex
@@ -35,19 +35,19 @@
     \newmdtheoremenv[
       hidealllines=true,
       leftline=true,
-      skipabove=0pt,
-      innertopmargin=-5pt,
+      skipabove={0},
+      innertopmargin={-1.2\baselineskip},
       innerbottommargin=2pt,
       linewidth=4pt,
       innerrightmargin=0pt,
       linecolor=#3,
     ]{#1}[#4]{#2}%
-  }{% Dependent counter
+  }{% Dependent counter 
     \newmdtheoremenv[
       hidealllines=true,
       leftline=true,
-      skipabove=0pt,
-      innertopmargin=-5pt,
+      skipabove={0},
+      innertopmargin={-1.2\baselineskip},
       innerbottommargin=2pt,
       linewidth=4pt,
       innerrightmargin=0pt,
