--- a/src/HAI722I_Recherche_Operationnelle/tds/td_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/tds/td_1.tex
@@ -144,7 +144,7 @@
 					\fill (A) circle (2pt) node[below left=2pt] {};
 					\fill (B) circle (2pt) node[below right=2pt] {};
 					\fill (P) circle (2pt) node[above left=2pt] {};
-				\end{tikzpicture}
+				\end{tikzpicture}\,
 			\end{center}
 		\end{enumerate}
 	\end{td-sol}
@@ -169,6 +169,7 @@
 		\begin{equation*}
 			x = \left(\alpha + \beta\right) x_0 = \alpha x_0 + \beta x_0.
 		\end{equation*}
+		
 		Donc \(x \in \alpha C + \beta C\).
 
 		Montrons maintenant l'inclusion \(\alpha C + \beta C \subset \left(\alpha + \beta\right) C\).
