Refactor presentation materials for NeuroSync and update structure
- Updated presentation_main.tex for improved clarity and formatting.
- Corrected typos and enhanced the business model description in the presentation.

- Added a new structure.txt file to outline the project directory and file organization.

- Made minor adjustments to the LaTeX files for consistency in formatting.
- Updated the mini use case slide for better readability.

--- a/src/HAI703I_Anglais/presentation/presentation_main.tex
+++ b/src/HAI703I_Anglais/presentation/presentation_main.tex
@@ -26,7 +26,7 @@
 
 % Title slide
 \begin{frame}
-    \titlepage
+    \titlepage{}
 \end{frame}
 
 % Slide 1: Hook
@@ -36,7 +36,7 @@
     % \end{center}
     \vspace{0.3cm}
     \begin{itemize}
-        \item NeuroSync \textemdash a wearable AI assistant that helps manage focus and recovery.
+        \item NeuroSync --- a wearable AI assistant that helps manage focus and recovery.
     \end{itemize}
 \end{frame}
 
@@ -112,8 +112,9 @@
     \begin{columns}
         \column{0.5\textwidth}
         \begin{itemize}
-            \item Device sales.
-            \item Subscription for advanced analytics.
+            \item \(1000\) devices sold in year 1 at \(€150\) each.
+            \item Subscription for advanced analytics and coaching: \(€5\)/month.
+            \item Partnerships with universities and tech firms.
             \item Integrations with calendars and development tools.
         \end{itemize}
         \column{0.5\textwidth}
@@ -124,7 +125,7 @@
 \end{frame}
 
 % Slide 8: Mini use case
-\begin{frame}{Mini use case \textendash Alice the developer}
+\begin{frame}{Mini use case --- Alice the developer}
     % \begin{center}
     %     \includegraphics[width=0.8\textwidth]{alice_usecase.png}
     % \end{center}
@@ -140,6 +141,7 @@
     % \begin{center}
     %     \includegraphics[width=0.9\textwidth]{closing_background.png}
         \vspace{0.4cm}
+        \centering
         \Large{Questions?}
     % \end{center}
 \end{frame}
