fix theorem pagebreak issue x1

--- a/src/common/macros/theorems.tex
+++ b/src/common/macros/theorems.tex
@@ -35,8 +35,8 @@
     \newmdtheoremenv[
       hidealllines=true,
       leftline=true,
-      skipabove={0},
-      innertopmargin={-1.2\baselineskip},
+      skipabove={0.1},
+      innertopmargin={0.1pt},
       innerbottommargin=2pt,
       linewidth=4pt,
       innerrightmargin=0pt,
@@ -46,8 +46,8 @@
     \newmdtheoremenv[
       hidealllines=true,
       leftline=true,
-      skipabove={0},
-      innertopmargin={-1.2\baselineskip},
+      skipabove={0.1},
+      innertopmargin={0.1pt},
       innerbottommargin=2pt,
       linewidth=4pt,
       innerrightmargin=0pt,
@@ -65,6 +65,7 @@
 
 % --- Toggle for showing solutions ---
 \newtoggle{showsolutions}
+\newtoggle{showquestions}
 
 % --- Custom exercise counter, reset per section ---
 \newcounter{tdcounter}
