maj ex1 dm1 H722

--- a/src/HAI722I_Recherche_Operationnelle/tds/td_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/tds/td_1.tex
@@ -144,7 +144,7 @@
 					\fill (A) circle (2pt) node[below left=2pt] {};
 					\fill (B) circle (2pt) node[below right=2pt] {};
 					\fill (P) circle (2pt) node[above left=2pt] {};
-				\end{tikzpicture}\,
+				\end{tikzpicture}
 			\end{center}
 		\end{enumerate}
 	\end{td-sol}
