maj ex1 part1 dm1 h722

--- a/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
@@ -76,6 +76,29 @@ soit en déposant votre devoir durant le cours
                 \hline % chktex 44
             \end{tabular}
         \end{center}
+        et on déroule l'algorithme:
+        \begin{itemize}
+            \item on rentre \(x_1\),
+            \item on sort \(y_1\).
+        \end{itemize}
+        \begin{center}
+            \begin{tabular}{|ccc|cccccccc|} % chktex 44
+                \hline  % chktex 44
+                & \ &\(c\)&\(5\)&\(2\)&\(0\)&\(0\)&\(0\)&\(-M\)&\(-M\)&\(-M\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)&\(x_5\)&\(y_1\)&\(y_2\)&\(y_3\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(5\)}& \multicolumn{1}{c|}{\(x_1^{2}=x_1\)} &\(\vphantom{\dfrac16}1\)&\(1\)&\(\frac16\)&\(-\frac16\)&\(0\)&\(0\)&\(\frac16\)&\(0\)&\(0\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(-M\)}& \multicolumn{1}{c|}{\(x_2^{2}=y_2\)} &\(\vphantom{\dfrac16}8\)&\(0\)&\(\frac{10}{3}\)&\(\frac46\)&\(-1\)&\(0\)&\(-\frac46\)&\(1\)&\(0\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(-M\)}& \multicolumn{1}{c|}{\(x_2^{2}=y_3\)} &\(\vphantom{\dfrac16}3\)&\(0\)&\(\frac{11}{6}\)&\(\frac16\)&\(0\)&\(-1\)&\(-\frac16\)&\(0\)&\(1\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(-11M+5\)} &\(\vphantom{\dfrac16}0\)&\(-\frac{31}6M-\frac7{12}\)&\(-\frac56M-\frac56\)&\(-M\)&\(-M\)&\(\frac16M+\frac56\)&\(0\)&\(0\)\\
+                \hline % chktex 44
+            \end{tabular}
+        \end{center}
+
     \end{enumerate}
 \end{td-sol}
 
