--- a/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
@@ -32,5 +32,10 @@
     \section{TD3}\label{sec:TD3}
     \setcounter{tdcounter}{0}
     \input{../tds/td_3.tex}
+
+    \newpage
+    \section{TD5}\label{sec:TD5}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_5.tex}
 \end{document}
 
