--- a/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
@@ -70,7 +70,7 @@ soit en déposant votre devoir durant le cours
                 \hline % chktex 44
                 \multicolumn{1}{|c|}{\(-M\)}& \multicolumn{1}{c|}{\(x_2^{1}=y_2\)} &\(12\)&\(4\)&\(4\)&\(0\)&\(-1\)&\(0\)&\(0\)&\(1\)&\(0\)\\
                 \hline % chktex 44
-                \multicolumn{1}{|c|}{\(-M\)}& \multicolumn{1}{c|}{\(x_2^{1}=y_3\)} &\(4\)&\(1\)&\(2\)&\(0\)&\(0\)&\(-1\)&\(0\)&\(0\)&\(1\)\\
+                \multicolumn{1}{|c|}{\(-M\)}& \multicolumn{1}{c|}{\(x_3^{1}=y_3\)} &\(4\)&\(1\)&\(2\)&\(0\)&\(0\)&\(-1\)&\(0\)&\(0\)&\(1\)\\
                 \hline % chktex 44
                 \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(-22M\)} &\(-11M-5\)&\(-7M-2\)&\(M\)&\(M\)&\(M\)&\(0\)&\(0\)&\(0\)\\
                 \hline % chktex 44
@@ -79,7 +79,7 @@ soit en déposant votre devoir durant le cours
         et on déroule l'algorithme:
         \begin{itemize}
             \item on rentre \(x_1\),
-            \item on sort \(y_1\).
+            \item on sort \(y_1\) car \(1 < 3 < 4\),
         \end{itemize}
         \begin{center}
             \begin{tabular}{|ccc|cccccccc|} % chktex 44
@@ -92,13 +92,55 @@ soit en déposant votre devoir durant le cours
                 \hline % chktex 44
                 \multicolumn{1}{|c|}{\(-M\)}& \multicolumn{1}{c|}{\(x_2^{2}=y_2\)} &\(\vphantom{\dfrac16}8\)&\(0\)&\(\frac{10}{3}\)&\(\frac46\)&\(-1\)&\(0\)&\(-\frac46\)&\(1\)&\(0\)\\
                 \hline % chktex 44
-                \multicolumn{1}{|c|}{\(-M\)}& \multicolumn{1}{c|}{\(x_2^{2}=y_3\)} &\(\vphantom{\dfrac16}3\)&\(0\)&\(\frac{11}{6}\)&\(\frac16\)&\(0\)&\(-1\)&\(-\frac16\)&\(0\)&\(1\)\\
+                \multicolumn{1}{|c|}{\(-M\)}& \multicolumn{1}{c|}{\(x_3^{2}=y_3\)} &\(\vphantom{\dfrac16}3\)&\(0\)&\(\frac{11}{6}\)&\(\frac16\)&\(0\)&\(-1\)&\(-\frac16\)&\(0\)&\(1\)\\
                 \hline % chktex 44
-                \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(-11M+5\)} &\(\vphantom{\dfrac16}0\)&\(-\frac{31}6M-\frac7{12}\)&\(-\frac56M-\frac56\)&\(-M\)&\(-M\)&\(\frac16M+\frac56\)&\(0\)&\(0\)\\
+                \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(-11M+5\)} &\(\vphantom{\dfrac16}0\)&\(-\frac{31}6M-\frac7{12}\)&\(-\frac56M-\frac56\)&\(M\)&\(M\)&\(\frac{11}{6}M+\frac56\)&\(0\)&\(0\)\\
                 \hline % chktex 44
             \end{tabular}
         \end{center}
-
+        \begin{itemize}
+            \item on rentre \(x_2\),
+            \item on sort \(y_3\) car \(\frac{11}{2} < 6 < \frac{80}{3}\),
+        \end{itemize}
+        \begin{center}
+            \begin{tabular}{|ccc|cccccccc|} % chktex 44
+                \hline  % chktex 44
+                & \ &\(c\)&\(5\)&\(2\)&\(0\)&\(0\)&\(0\)&\(-M\)&\(-M\)&\(-M\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)&\(x_5\)&\(y_1\)&\(y_2\)&\(y_3\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(5\)}& \multicolumn{1}{c|}{\(x_1^{3}=x_1\)} &\(\vphantom{\dfrac16}\frac{8}{11}\)&\(1\)&\(0\)&\(-\frac{2}{11}\)&\(0\)&\(\frac{1}{11}\)&\(\frac{2}{11}\)&\(0\)&\(-\frac{1}{11}\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(-M\)}& \multicolumn{1}{c|}{\(x_2^{3}=y_2\)} &\(\vphantom{\dfrac16}\frac{28}{11}\)&\(0\)&\(0\)&\(\frac{4}{11}\)&\(-1\)&\(\frac{20}{11}\)&\(-\frac{4}{11}\)&\(1\)&\(-\frac{20}{11}\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(2\)}& \multicolumn{1}{c|}{\(x_3^{3}=x_2\)} &\(\vphantom{\dfrac16}\frac{18}{11}\)&\(0\)&\(1\)&\(\frac{1}{11}\)&\(0\)&\(-\frac{6}{11}\)&\(-\frac{1}{11}\)&\(0\)&\(\frac{6}{11}\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(-\frac{28}{11}M + \frac{76}{11}\)} &\(\vphantom{\dfrac16}0\)&\(0\)&\(-\frac{4}{11}M-\frac{8}{11}\)&\(-M\)&\(-\frac{20}{11}M-\frac{7}{11}\)&\(\frac{15}{11}M+\frac{8}{11}\)&\(0\)&\(\frac{31}{11}M+\frac{7}{11}\)\\
+                \hline % chktex 44
+            \end{tabular}
+        \end{center}
+        \begin{itemize}
+            \item on rentre \(x_5\),
+            \item on sort \(y_2\) car \(\frac{7}{5} < 8\) (l'autre rapport
+            étant négatif on le compte pas),
+        \end{itemize}
+        \begin{center}
+            \begin{tabular}{|ccc|cccccccc|} % chktex 44
+                \hline  % chktex 44
+                & \ &\(c\)&\(5\)&\(2\)&\(0\)&\(0\)&\(0\)&\(-M\)&\(-M\)&\(-M\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)&\(x_5\)&\(y_1\)&\(y_2\)&\(y_3\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(5\)}& \multicolumn{1}{c|}{\(x_1^{4}=x_1\)} &\(\vphantom{\dfrac16}\frac{3}{5}\)&\(1\)&\(0\)&\(-\frac{1}{5}\)&\(\frac{1}{20}\)&\(0\)&\(\frac{1}{5}\)&\(-\frac{1}{20}\)&\(0\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_2^{4}=x_5\)} &\(\vphantom{\dfrac16}\frac{7}{5}\)&\(0\)&\(0\)&\(\frac{1}{5}\)&\(-\frac{11}{20}\)&\(1\)&\(-\frac{1}{5}\)&\(\frac{11}{20}\)&\(-1\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(2\)}& \multicolumn{1}{c|}{\(x_3^{4}=x_2\)} &\(\vphantom{\dfrac16}\frac{12}{5}\)&\(0\)&\(1\)&\(\frac{1}{5}\)&\(-\frac{3}{10}\)&\(0\)&\(-\frac{1}{5}\)&\(\frac{3}{10}\)&\(0\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(\frac{39}{5}\)} &\(\vphantom{\dfrac16}0\)&\(0\)&\(-\frac{3}{5}\)&\(-\frac{7}{20}\)&\(0\)&\(M+\frac{3}{5}\)&\(M+\frac{7}{20}\)&\(M\)\\
+                \hline % chktex 44
+            \end{tabular}
+        \end{center}
     \end{enumerate}
 \end{td-sol}
 
