fini simplexe big m ex1 q1 dm1 h722

--- a/src/HAI722I_Recherche_Operationnelle/assets/module_header.tex
+++ b/src/HAI722I_Recherche_Operationnelle/assets/module_header.tex
@@ -41,3 +41,5 @@
 \counterwithout{tdcounter}{section} 
 
 \usetikzlibrary{shapes,arrows,positioning,calc,fit,backgrounds,angles,quotes}
+
+\newcommand{\becomes}{\begin{center}\(\downarrow\)\end{center}}
