--- a/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
@@ -81,6 +81,7 @@ soit en déposant votre devoir durant le cours
             \item on rentre \(x_1\),
             \item on sort \(y_1\) car \(1 < 3 < 4\),
         \end{itemize}
+        \becomes{}
         \begin{center}
             \begin{tabular}{|ccc|cccccccc|} % chktex 44
                 \hline  % chktex 44
@@ -102,6 +103,7 @@ soit en déposant votre devoir durant le cours
             \item on rentre \(x_2\),
             \item on sort \(y_3\) car \(\frac{11}{2} < 6 < \frac{80}{3}\),
         \end{itemize}
+        \becomes{}
         \begin{center}
             \begin{tabular}{|ccc|cccccccc|} % chktex 44
                 \hline  % chktex 44
@@ -124,6 +126,7 @@ soit en déposant votre devoir durant le cours
             \item on sort \(y_2\) car \(\frac{7}{5} < 8\) (l'autre rapport
             étant négatif on le compte pas),
         \end{itemize}
+        \becomes{}
         \begin{center}
             \begin{tabular}{|ccc|cccccccc|} % chktex 44
                 \hline  % chktex 44
@@ -141,6 +144,76 @@ soit en déposant votre devoir durant le cours
                 \hline % chktex 44
             \end{tabular}
         \end{center}
+        A ce stade, il est clair que les variables artificielles ne pourront plus entrer en base.
+        On peut donc les retirer et procéder sur le tableau réduit suivant:
+        \begin{center}
+            \begin{tabular}{|ccc|ccccc|} % chktex 44
+                \hline  % chktex 44
+                & \ &\(c\)&\(5\)&\(2\)&\(0\)&\(0\)&\(0\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)&\(x_5\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(5\)}& \multicolumn{1}{c|}{\(x_1^{4}=x_1\)} &\(\vphantom{\dfrac16}\frac{3}{5}\)&\(1\)&\(0\)&\(-\frac{1}{5}\)&\(\frac{1}{20}\)&\(0\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_2^{4}=x_5\)} &\(\vphantom{\dfrac16}\frac{7}{5}\)&\(0\)&\(0\)&\(\frac{1}{5}\)&\(-\frac{11}{20}\)&\(1\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(2\)}& \multicolumn{1}{c|}{\(x_3^{4}=x_2\)} &\(\vphantom{\dfrac16}\frac{12}{5}\)&\(0\)&\(1\)&\(\frac{1}{5}\)&\(-\frac{3}{10}\)&\(0\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(\frac{39}{5}\)} &\(\vphantom{\dfrac16}0\)&\(0\)&\(-\frac{3}{5}\)&\(-\frac{7}{20}\)&\(0\)\\
+                \hline % chktex 44
+            \end{tabular}
+        \end{center}
+        \begin{itemize}
+            \item on rentre \(x_3\),
+            \item on sort \(x_5\),
+        \end{itemize}
+        \becomes{}
+        \begin{center}
+            \begin{tabular}{|ccc|ccccc|} % chktex 44
+                \hline  % chktex 44
+                & \ &\(c\)&\(5\)&\(2\)&\(0\)&\(0\)&\(0\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)&\(x_5\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(5\)}& \multicolumn{1}{c|}{\(x_1^{5}=x_1\)} &\(\vphantom{\dfrac16}2\)&\(1\)&\(0\)&\(0\)&\(-\frac{1}{2}\)&\(1\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_2^{5}=x_3\)} &\(\vphantom{\dfrac16}7\)&\(0\)&\(0\)&\(1\)&\(-\frac{11}{4}\)&\(5\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(2\)}& \multicolumn{1}{c|}{\(x_3^{5}=x_2\)} &\(\vphantom{\dfrac16}1\)&\(0\)&\(1\)&\(0\)&\(\frac{1}{4}\)&\(-1\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(12\)} &\(\vphantom{\dfrac16}0\)&\(0\)&\(0\)&\(-2\)&\(3\)\\
+                \hline % chktex 44
+            \end{tabular}
+        \end{center}
+        Il ne reste probablement qu'une étape, faisons-la:
+        \begin{itemize}
+            \item on rentre \(x_4\),
+            \item on sort \(x_2\), c'est la seule valeur positive,
+        \end{itemize}
+        \becomes{}
+        \begin{center}
+            \begin{tabular}{|ccc|ccccc|} % chktex 44
+                \hline  % chktex 44
+                & \ &\(c\)&\(5\)&\(2\)&\(0\)&\(0\)&\(0\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)&\(x_5\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(5\)}& \multicolumn{1}{c|}{\(x_1^{6}=x_1\)} &\(\vphantom{\dfrac16}4\)&\(1\)&\(2\)&\(0\)&\(0\)&\(-1\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_2^{6}=x_3\)} &\(\vphantom{\dfrac16}18\)&\(0\)&\(11\)&\(1\)&\(0\)&\(-6\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_3^{6}=x_4\)} &\(\vphantom{\dfrac16}4\)&\(0\)&\(4\)&\(0\)&\(1\)&\(-4\)\\
+                \hline % chktex 44
+                \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(20\)} &\(\vphantom{\dfrac16}0\)&\(8\)&\(0\)&\(0\)&\(-5\)\\
+                \hline % chktex 44
+            \end{tabular}
+        \end{center}
+        Dommage, on a encore un point pivot à faire rentrer (\(x_5\) a 
+        valeur négative) donc on aimerait continuer de dérouler l'algorithme
+        mais on a pas de critère pour trouver quelle variable sortir de base
+        (en effet, toutes les valeurs dans la colonne du pivot sont négatives).
+        
+
     \end{enumerate}
 \end{td-sol}
 
