added conclusion on ex1 p1 dm1 H722

--- a/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
@@ -213,6 +213,10 @@ soit en déposant votre devoir durant le cours
         mais on a pas de critère pour trouver quelle variable sortir de base
         (en effet, toutes les valeurs dans la colonne du pivot sont négatives).
         
+        On conclut donc que l'espace des solutions est non borné.
+        C'est-à-dire qu'il n'existe pas \og{}un couple maximum\fg{}
+        car on peut toujours en trouver un plus grand. Donc
+        il n'y a pas un unique couple \((x_1, x_2)\) qui maximise \(z\).
 
     \end{enumerate}
 \end{td-sol}
