maj upd td2 ex5 7 8 H711

--- a/src/HAI711I_Graphes_Structures/tds/td_1.tex
+++ b/src/HAI711I_Graphes_Structures/tds/td_1.tex
@@ -76,6 +76,14 @@
 			\item On a les hypercubes suivants:
 			
 			\input{../assets/tikz/td_1_ex_2_q1.tex}
+
+			\item On peut effectuer le parcours suivant:
+			\begin{equation*}
+				000 \to 001 \to 101 \to 100 \to 110 \to 010 \to 011 \to 111
+			\end{equation*}
+			ce qui se représente visuellement comme suit:
+
+			\input{../assets/tikz/td_1_ex_2_q2.tex}
 		\end{enumerate}
 	\end{td-sol}
 }{}
