--- a/src/HAI711I_Graphes_Structures/tds/td_main.tex
+++ b/src/HAI711I_Graphes_Structures/tds/td_main.tex
@@ -25,12 +25,12 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
 
-    % \newpage
-    % \section*{TD2 --- Couplages}\label{sec:TD2}
-    % \addcontentsline{toc}{section}{\nameref{sec:TD2}}
-    % \setcounter{section}{2}
-    % \setcounter{tdcounter}{0}
-    % \input{../tds/td_2.tex}
+    \newpage
+    \section*{TD2 --- Couplages}\label{sec:TD2}
+    \addcontentsline{toc}{section}{\nameref{sec:TD2}}
+    \setcounter{section}{2}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_2.tex}
 
     % \newpage
     % \section*{TD3 --- Flots et circulation}\label{sec:TD3}
