--- a/src/HAI711I_Graphes_Structures/assets/tikz/td_1_ex_2_q2.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/td_1_ex_2_q2.tex
@@ -9,7 +9,7 @@
             \def\L{2}            % side length of square
             \def\dx{0.9} 
             \def\dy{0.6}         % offset for the "back" square (gives perspective)
-            \def\offset{0.12}    % offset distance from cube edges
+            \def\offset{0.15}    % offset distance from cube edges
             
             % front (lower) square: coordinates ordered 000,001,011,010 (clockwise)
             \coordinate (v000) at (0,0);
@@ -25,53 +25,59 @@
             
             % draw edges front square
             \foreach \a/\b in {v000/v001, v001/v011, v011/v010, v010/v000}
-                \draw (\a) -- (\b);
+                \draw[gray!50] (\a) -- (\b);
             
             % draw edges back square
             \foreach \a/\b in {v100/v101, v101/v111, v111/v110, v110/v100}
-                \draw (\a) -- (\b);
+                \draw[gray!50] (\a) -- (\b);
             
             % connect corresponding vertices (cube edges)
             \foreach \a/\b in {v000/v100, v001/v101, v011/v111, v010/v110}
-                \draw (\a) -- (\b);
+                \draw[gray!50] (\a) -- (\b);
             
             % Path: 000 → 001 → 101 → 100 → 110 → 010 → 011 → 111
-            % Draw arrows parallel to edges but offset outside
             
             % Arrow 1: 000 → 001 (bottom edge, offset downward)
-            \draw[->, thick, red!70!black] 
-                ($ (v000) + (0,-\offset) $) -- ($ (v001) + (0,-\offset) $);
-            \node[draw=none, fill=none, font=\tiny, text=red!70!black] at ($ (v000)!0.5!(v001) + (0,-\offset-0.15) $) {1};
+            \draw[->, very thick, red!70!black] 
+                ($ (v000) + (0.1,-\offset) $) -- ($ (v001) + (-0.1,-\offset) $);
+            \node[draw=none, fill=white, inner sep=1pt, font=\tiny, text=red!70!black] 
+                at ($ (v000)!0.5!(v001) + (0,-\offset-0.25) $) {1};
             
-            % Arrow 2: 001 → 101 (right-back edge, offset to the right)
-            \draw[->, thick, red!70!black] 
-                ($ (v001) + (\offset,-\offset) $) -- ($ (v101) + (\offset,-\offset) $);
-            \node[draw=none, fill=none, font=\tiny, text=red!70!black] at ($ (v001)!0.5!(v101) + (\offset+0.15,-\offset) $) {2};
+            % Arrow 2: 001 → 101 (right-back edge, offset right/down)
+            \draw[->, very thick, red!70!black] 
+                ($ (v001) + (\offset,0) $) -- ($ (v101) + (\offset,0) $);
+            \node[draw=none, fill=white, inner sep=1pt, font=\tiny, text=red!70!black] 
+                at ($ (v001)!0.3!(v101) + (\offset+0.3,0) $) {2};
             
-            % Arrow 3: 101 → 100 (top-back edge, offset behind/up)
-            \draw[->, thick, red!70!black] 
-                ($ (v101) + (\offset,\offset) $) -- ($ (v100) + (\offset,\offset) $);
-            \node[draw=none, fill=none, font=\tiny, text=red!70!black] at ($ (v101)!0.5!(v100) + (\offset,\offset+0.15) $) {3};
+            % Arrow 3: 101 → 100 (back edge, offset back/up)
+            \draw[->, very thick, red!70!black] 
+                ($ (v101) + (-0.1,\offset) $) -- ($ (v100) + (0.1,\offset) $);
+            \node[draw=none, fill=white, inner sep=1pt, font=\tiny, text=red!70!black] 
+                at ($ (v101)!0.52!(v100) + (0,\offset+0.2) $) {3};
             
-            % Arrow 4: 100 → 110 (left-back edge, offset behind/left)
-            \draw[->, thick, red!70!black] 
-                ($ (v100) + (-\offset,\offset) $) -- ($ (v110) + (-\offset,\offset) $);
-            \node[draw=none, fill=none, font=\tiny, text=red!70!black] at ($ (v100)!0.5!(v110) + (-\offset-0.15,\offset) $) {4};
+            % Arrow 4: 100 → 110 (left-back edge, offset left/back)
+            \draw[->, very thick, red!70!black] 
+                ($ (v100) + (-\offset,0.1) $) -- ($ (v110) + (-\offset,-0.1) $);
+            \node[draw=none, fill=white, inner sep=1pt, font=\tiny, text=red!70!black] 
+                at ($ (v100)!0.5!(v110) + (-\offset-0.2,0) $) {4};
             
-            % Arrow 5: 110 → 010 (left front-back edge, offset to the left)
-            \draw[->, thick, red!70!black] 
+            % Arrow 5: 110 → 010 (left front-back edge, offset left)
+            \draw[->, very thick, red!70!black] 
                 ($ (v110) + (-\offset,0) $) -- ($ (v010) + (-\offset,0) $);
-            \node[draw=none, fill=none, font=\tiny, text=red!70!black] at ($ (v110)!0.5!(v010) + (-\offset-0.15,0) $) {5};
+            \node[draw=none, fill=white, inner sep=1pt, font=\tiny, text=red!70!black] 
+                at ($ (v110)!0.4!(v010) + (-\offset-0.25,0.1) $) {5};
             
-            % Arrow 6: 010 → 011 (left-top edge, offset to the right)
-            \draw[->, thick, red!70!black] 
-                ($ (v010) + (\offset,0) $) -- ($ (v011) + (\offset,0) $);
-            \node[draw=none, fill=none, font=\tiny, text=red!70!black] at ($ (v010)!0.5!(v011) + (\offset+0.15,0) $) {6};
+            % Arrow 6: 010 → 011 (left-top edge, offset upward)
+            \draw[->, very thick, red!70!black] 
+                ($ (v010) + (0.1,\offset) $) -- ($ (v011) + (-0.1,\offset) $);
+            \node[draw=none, fill=white, inner sep=1pt, font=\tiny, text=red!70!black] 
+                at ($ (v010)!0.6!(v011) + (0,-\offset-0.1) $) {6};
             
-            % Arrow 7: 011 → 111 (right front-back edge, offset to the right)
-            \draw[->, thick, red!70!black] 
+            % Arrow 7: 011 → 111 (right front-back edge, offset right)
+            \draw[->, very thick, red!70!black] 
                 ($ (v011) + (\offset,0) $) -- ($ (v111) + (\offset,0) $);
-            \node[draw=none, fill=none, font=\tiny, text=red!70!black] at ($ (v011)!0.5!(v111) + (\offset+0.15,0) $) {7};
+            \node[draw=none, fill=white, inner sep=1pt, font=\tiny, text=red!70!black] 
+                at ($ (v011)!0.3!(v111) + (\offset+0.3,0) $) {7};
             
             % nodes with labels (binary strings) - drawn last to be on top
             \node at (v000) {000};
