--- a/src/HAI711I_Graphes_Structures/assets/tikz/td_2_ex_9_2.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/td_2_ex_9_2.tex
@@ -1,6 +1,6 @@
 % Figure 1
-\ffigbox[\FBwidth]{
-\label{Fig:td2ex9}
+\ffigbox[\FBwidth]{%
+\label{Fig:td2ex9c2}
 }{
     \fbox{
         \begin{tikzpicture}[scale=1, every node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\scriptsize, minimum size=4mm}]
