--- a/src/HAI702I_Algebre/tds/td_2.tex
+++ b/src/HAI702I_Algebre/tds/td_2.tex
@@ -305,10 +305,38 @@ Les exercices ou les questions marqués d'une étoile ne sont pas prioritaires.
 % ----- Solutions exo 4 ----- %
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ %
-		Non traité.
-	\end{td-sol}
+		Soit \(M\) une matrice triangulaire. On peut supposer 
+		sans perte de généralité que \(M\) est triangulaire supérieure (en 
+		effet, le déterminant d'une matrice est le même que celui de sa 
+		transposée). Alors \(M\) s'écrit:
+		\begin{equation*}
+			\begin{pmatrix}
+				m_{1,1} & m_{1,2} & m_{1,3} & \cdots & m_{1,n}\\
+				0 & m_{2,2} & m_{2,3} & \cdots & m_{2,n}\\
+				0 & 0 & m_{3,3} & \cdots & m_{3,n}\\
+				\vdots & \vdots & \vdots & \ddots & \vdots\\
+				0 & 0 & 0 & \cdots & m_{n,n}
+			\end{pmatrix}
+		\end{equation*}
+		On peut développer le calcul du déterminant:
+		\begin{equation*}
+			\begin{aligned}
+				\det(M)
+				&= m_{1,1} \det\begin{pmatrix}
+					m_{2,2} & m_{2,3} & \cdots & m_{2,n}\\
+					0 & m_{3,3} & \cdots & m_{3,n}\\
+					\vdots & \vdots & \ddots & \vdots\\
+					0 & 0 & \cdots & m_{n,n}
+				\end{pmatrix}
+			\end{aligned}
+		\end{equation*}
+		En faisant une simple récurrence, on trouve:
+		\begin{equation*}
+			\det(M) = m_{1,1} \times m_{2,2} \times m_{3,3} \times \cdots \times m_{n,n} = \prod_{i=1}^{n} m_{i,i}.
+		\end{equation*}
+		c'est-à-dire le produit des entrées diagonales.
+\end{td-sol}
 }{}
-
 
 % ----- Consignes exo 5 ----- %
 \begin{td-exo}[Inverser des matrices avec calculs] \,\\% 5
