--- a/src/HAI702I_Algebre/tds/td_2.tex
+++ b/src/HAI702I_Algebre/tds/td_2.tex
@@ -368,7 +368,100 @@ Les exercices ou les questions marqués d'une étoile ne sont pas prioritaires.
 % ----- Solutions exo 5 ----- %
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ %
-		Non traité.
+		Appliquons le pivot de Gauss aux matrices \(A\) et \(B\).
+		\begin{enumerate}
+			\item Pour \(A\), on a:
+			\begin{equation*}
+				\begin{aligned}
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 1 & 2 & 1 & 0 & 0\\
+						1 & 2 & 1 & 0 & 1 & 0\\
+						2 & 1 & 1 & 0 & 0 & 1
+					\end{array}\right)
+					&\xrightarrow{L_2 \leftarrow L_2 - L_1}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 1 & 2 & 1 & 0 & 0\\
+						0 & 1 & -1 & -1 & 1 & 0\\
+						2 & 1 & 1 & 0 & 0 & 1
+					\end{array}\right)\\
+					&\xrightarrow{L_3 \leftarrow L_3 - 2L_1}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 1 & 2 & 1 & 0 & 0\\
+						0 & 1 & -1 & -1 & 1 & 0\\
+						0 & -1 & -3 & -2 & 0 & 1
+					\end{array}\right)\\
+					&\xrightarrow{L_3 \leftarrow L_3 + L_2}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 1 & 2 & 1 & 0 & 0\\
+						0 & 1 & -1 & -1 & 1 & 0\\
+						0 & 0 & -4 & -3 & 1 & 1
+					\end{array}\right)\\
+					&\xrightarrow{L_3 \leftarrow -\frac14 L_3}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 1 & 2 & 1 & 0 & 0\\
+						0 & 1 & -1 & -1 & 1 & 0\\
+						0 & 0 & 1 & \frac34 & -\frac14 & -\frac14
+					\end{array}\right)\\
+					&\xrightarrow{L_2 \leftarrow L_2 + L_3}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 1 & 2 & 1 & 0 & 0\\
+						0 & 1 & 0 & -\frac14 & \frac34 & -\frac14\\
+						0 & 0 & 1 & \frac34 & -\frac14 & -\frac14
+					\end{array}\right)\\
+					&\xrightarrow{L_1 \leftarrow L_1 - 2L_3}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 1 & 0 & -\frac12 & \frac12 & \frac12\\
+						0 & 1 & 0 & -\frac14 & \frac34 & -\frac14\\
+						0 & 0 & 1 & \frac34 & -\frac14 & -\frac14
+					\end{array}\right)\\
+					&\xrightarrow{L_1 \leftarrow L_1 - L_2}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 0 & 0 & -\frac14 & -\frac14 & \frac34\\
+						0 & 1 & 0 & -\frac14 & \frac34 & -\frac14\\
+						0 & 0 & 1 & \frac34 & -\frac14 & -\frac14
+					\end{array}\right)
+				\end{aligned}
+			\end{equation*}
+			On est arrivé jusqu'à la matrice identité, donc \(A\) est inversible et
+			\begin{equation*}
+				\boxed{A^{-1} = -\frac{1}{4}
+				\begin{pmatrix}
+					1 & 1 & -3\\
+					1 & -3 & 1\\
+					-3 & 1 & 1
+				\end{pmatrix}}.
+			\end{equation*}
+
+			\item Pour \(B\), on a:
+			\begin{equation*}
+				\begin{aligned}
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 4 & 7 & 1 & 0 & 0\\
+						2 & 5 & 8 & 0 & 1 & 0\\
+						3 & 6 & 9 & 0 & 0 & 1
+					\end{array}\right)
+					&\xrightarrow{L_2 \leftarrow L_2 - 2L_1}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 4 & 7 & 1 & 0 & 0\\
+						0 & -3 & -6 & -2 & 1 & 0\\
+						3 & 6 & 9 & 0 & 0 & 1
+					\end{array}\right)\\
+					&\xrightarrow{L_3 \leftarrow L_3 - 3L_1}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 4 & 7 & 1 & 0 & 0\\
+						0 & -3 & -6 & -2 & 1 & 0\\
+						0 & -6 & -12 & -3 & 0 & 1
+					\end{array}\right)\\
+					&\xrightarrow{L_3 \leftarrow L_3 - 2L_2}&&
+					\left(\begin{array}{ccc|ccc} % chktex 44
+						1 & 4 & 7 & 1 & 0 & 0\\
+						0 & -3 & -6 & -2 & 1 & 0\\
+						0 & 0 & 0 & +1 & -2 & +1
+					\end{array}\right)
+				\end{aligned}
+			\end{equation*}
+			L'algorithme s'arrête avant de trouver la matrice identité, donc \(B\) n'est pas inversible.
+		\end{enumerate}
 	\end{td-sol}
 }{}
 
