--- a/src/HAI711I_Graphes_Structures/dms/dm_main.tex
+++ b/src/HAI711I_Graphes_Structures/dms/dm_main.tex
@@ -10,9 +10,9 @@
 \author{Ivan Lejeune}
 \date{\today}
 
-\toggletrue{showquestions} % Allows showing/hiding questions
+% \toggletrue{showquestions} % Allows showing/hiding questions
 % uncomment the following line to hide questions
-% \togglefalse{showquestions}
+\togglefalse{showquestions}
 
 \begin{document}
     \maketitle
